--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<artifactId>wh40k</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Warhammer 40K Character Creator</name>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -19,7 +20,6 @@
 		<swagger-springmvc.version>0.9.3</swagger-springmvc.version>
 		<scala-library.version>2.10.4</scala-library.version>
 		<swagger-spring-mvc-ui.version>0.4</swagger-spring-mvc-ui.version>
-
 	</properties>
 
 	<dependencies>
@@ -51,9 +51,9 @@
 			<artifactId>jackson-datatype-joda</artifactId>
 		</dependency>
 		<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-annotations</artifactId>
-			</dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.mangofactory</groupId>
 			<artifactId>swagger-springmvc</artifactId>
@@ -71,7 +71,10 @@
 		</dependency>
 
 		<!-- Test -->
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-test</artifactId> </dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -79,6 +82,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
