--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9000
 
 #Basic Spring Boot Config for Oracle
-spring.datasource.url=jdbc:oracle:thin:@//192.168.3.2:1521/TSH1
-spring.datasource.username=mfuser
-spring.datasource.password=mfs3s
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username=WH40K
+spring.datasource.password=WH40K
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
  
 #hibernate config
